--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,7 @@ Parallax End-->
                             <li>
                                 <span class="address-icon gradient-text2"><img alt="client-logo" src="agency/img/email.png" height="28" width="28"></span>
                                 <span class="address-text">
-                                            <a class="mr-3 alt-color" href="mailto:Chukwuchibuzor009@gmail.com">Chukwuchibuzor009@gmail.com</a>
+                                            <a class="mr-3 alt-color" href="mailto:antivenomMarketing@gmail.com">Chukwuchibuzor009@gmail.com</a>
                                         </span>
                             </li>
                         </ul>
@@ -1206,7 +1206,7 @@ Parallax End-->
                                 <a class="wow fadeInDown" href="https://t.me/AntiVenomcalls" target="_blank"><img alt="client-logo" src="agency/img/twitter.png" height="30" width="30"></a>
                             </li>
                             <li>
-                                <a class="wow fadeInUp" href="mailto:Chukwuchibuzor009@gmail.com"><img alt="client-logo" src="agency/img/email.png" height="30" width="30"></a>
+                                <a class="wow fadeInUp" href="mailto:antivenomMarketing@gmail.com"><img alt="client-logo" src="agency/img/email.png" height="30" width="30"></a>
                             </li>
                         </ul>
                     </div>
