get started button

--- a/index.html
+++ b/index.html
@@ -433,15 +433,15 @@
                         </p>
 
 
-                        <a class="nav-link link scroll active btn btn-large btn-rounded btn-hvr-blue mt-3" href="https://t.me/AntiVenomcalls" target="_blank" style="color: #ffffff; background-color: #00d2ff; border-color: #00ffc3;">Get Started
-                            <div class="btn-hvr-setting">
-                                <ul class="btn-hvr-setting-inner">
-                                    <li class="btn-hvr-effect"></li>
-                                    <li class="btn-hvr-effect"></li>
-                                    <li class="btn-hvr-effect"></li>
-                                    <li class="btn-hvr-effect"></li>
-                                </ul>
-                            </div>
+                        <a class="nav-link link scroll active btn btn-large btn-rounded btn-hvr-blue mt-3" href="https://t.me/AntiVenomcalls" target="_blank" style="color: #ffffff; background-color: #00d2ff; border-color: #00ffc3;">Get Started</a>
+                        <div class="btn-hvr-setting">
+                            <ul class="btn-hvr-setting-inner">
+                                <li class="btn-hvr-effect"></li>
+                                <li class="btn-hvr-effect"></li>
+                                <li class="btn-hvr-effect"></li>
+                                <li class="btn-hvr-effect"></li>
+                            </ul>
+                        </div>
                         </a>
                     </div>
                 </div>
