email change again

--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,7 @@ Parallax End-->
                             <li>
                                 <span class="address-icon gradient-text2"><img alt="client-logo" src="agency/img/email.png" height="28" width="28"></span>
                                 <span class="address-text">
-                                            <a class="mr-3 alt-color" href="mailto:antivenomMarketing@gmail.com">Chukwuchibuzor009@gmail.com</a>
+                                            <a class="mr-3 alt-color" href="mailto:antivenomMarketing@gmail.com">antivenomMarketing@gmail.com</a>
                                         </span>
                             </li>
                         </ul>
