--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                             </label>
                         </div>
 
-                        <a class="btn btn-large btn-rounded btn-blue btn-hvr-pink modal_contact_btn" href="javascript:void(0);" id="quote_submit_btn"><i
+                        <a class="btn btn-large btn-rounded btn-blue btn-hvr-pink modal_contact_btn" href="https://t.me/TomMatthew" target="_blank" id="quote_submit_btn"><i
                                 class="fa fa-spinner fa-spin mr-2 d-none" aria-hidden="true"></i><b>Send Message</b>
                             <div class="btn-hvr-setting">
                                 <ul class="btn-hvr-setting-inner">
