--- a/index.html
+++ b/index.html
@@ -1055,24 +1055,23 @@ Parallax End-->
                         </p>
                         <!--Client Slider-->
                         <div class="owl-carousel partners-slider">
-                            <!--Item-->
-                            <div class="logo-item"><img alt="client-logo" src="agency/img/MEXC-LOGO.png"></div>
-                            <!--Item-->
-                            <div class="logo-item"><img alt="client-logo" src="agency/img/kucoin.png"></div>
-                            <!--Item
-                    <div class="logo-item"><img alt="client-logo" src="agency/img/sig.png"></div> -->
-                            <!--Item-->
-                            <div class="logo-item"><img alt="client-logo" src="agency/img/Bybit-colored-logo-4066014164.png"></div>
-                            <!--Item-->
-                            <div class="logo-item"><img alt="client-logo" src="agency/img/binance-logo-2-768x155-3987171316.png"></div>
-                            <!--Item-->
-                            <div class="logo-item"><img alt="client-logo" src="agency/img/protocol.png"></div>
-                            <!--Item
-                     <div class="logo-item"><img alt="client-logo" src="agency/img/n.png"></div> -->
-                            <!--Item-->
-                            <!-- <div class="logo-item"><img alt="client-logo" src="agency/img/xdc.png"></div> -->
-                            <!-- <div class="logo-item"><img alt="client-logo" src="agency/img/lunat.png"></div> -->
+                            <div class="logo-item">
+                                <img alt="client-logo" src="agency/img/MEXC-LOGO.png" style="width: 150px; height: auto;">
+                            </div>
+                            <div class="logo-item">
+                                <img alt="client-logo" src="agency/img/kucoin.png" style="width: 150px; height: auto;">
+                            </div>
+                            <div class="logo-item">
+                                <img alt="client-logo" src="agency/img/Bybit-colored-logo-4066014164.png" style="width: 150px; height: auto;">
+                            </div>
+                            <div class="logo-item">
+                                <img alt="client-logo" src="agency/img/binance-logo-2-768x155-3987171316.png" style="width: 150px; height: auto;">
+                            </div>
+                            <div class="logo-item">
+                                <img alt="client-logo" src="agency/img/protocol.png" style="width: 150px; height: auto;">
+                            </div>
                         </div>
+
                     </div>
                 </div>
             </div>
