--- a/index.html
+++ b/index.html
@@ -431,9 +431,9 @@
                             our
                             <span style="color: white; font-style: italic;">vast network and resources</span> and the <span style="color: white; font-style: italic;">best value in the industry</span>, we offer clients <span style="color: white; font-style: italic;">tailored strategies</span>                            to ensure their project's success within any budget.
                         </p>
-
-
-                        <a class="nav-link link scroll active btn btn-large btn-rounded btn-hvr-blue mt-3" href="https://t.me/AntiVenomcalls" target="_blank" style="color: #ffffff; background-color: #00d2ff; border-color: #00ffc3;">Get Started</a>
+                        <a class=" btn btn-large btn-rounded btn-hvr-blue mt-3" href="https://t.me/AntiVenomcalls" target="_blank" rel="noopener noreferrer" style="color: #ffffff; background-color: #00d2ff; border-color: #00ffc3; text-decoration: none;">
+                        Get Started
+                      </a>
                         <div class="btn-hvr-setting">
                             <ul class="btn-hvr-setting-inner">
                                 <li class="btn-hvr-effect"></li>
