--- a/index.html
+++ b/index.html
@@ -257,8 +257,7 @@
                             </label>
                         </div>
 
-                        <a class="btn btn-large btn-rounded btn-blue btn-hvr-pink modal_contact_btn" href="https://t.me/TomMatthew" target="_blank" id="quote_submit_btn"><i
-                                class="fa fa-spinner fa-spin mr-2 d-none" aria-hidden="true"></i><b>Send Message</b>
+                        <a class="btn btn-large btn-rounded btn-blue btn-hvr-pink modal_contact_btn" href="https://t.me/TomMatthew" target="_blank" id="quote_submit_btn"><b>Send Message</b>
                             <div class="btn-hvr-setting">
                                 <ul class="btn-hvr-setting-inner">
                                     <li class="btn-hvr-effect"></li>
@@ -1165,7 +1164,7 @@ Parallax End-->
 
                             <!--Button-->
                             <div class="col-md-12">
-                                <a class="btn btn-large btn-rounded btn-purple btn-hvr-blue d-block mt-4 contact_btn" href="javascript:void(0)" id="submit_btn"><i
+                                <a class="btn btn-large btn-rounded btn-purple btn-hvr-blue d-block mt-4 contact_btn" href="https://t.me/TomMatthew" id="submit_btn"><i
                                         class="fa fa-spinner fa-spin mr-2 d-none" aria-hidden="true"></i><b>Send
                                         Message</b>
                                     <div class="btn-hvr-setting">
